--- a/src/App.scss
+++ b/src/App.scss
@@ -4,4 +4,16 @@
   font-family: "Kanit", sans-serif;
   font-weight: 400;
   font-size: 20px;
+  color: #000814;
+  white-space: pre-line;
+}
+
+.caption {
+  color: #003566;
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+.caption-large {
+  font-size: 2rem;
 }
