--- a/src/components/LoadingScreen/loadingScreen.scss
+++ b/src/components/LoadingScreen/loadingScreen.scss
@@ -3,6 +3,8 @@
   height: 100vh;
   background-color: #fbc308;
   position: absolute;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   white-space: pre-line;
