--- a/src/components/Main/main.scss
+++ b/src/components/Main/main.scss
@@ -1,5 +1,4 @@
 #main {
-  white-space: pre-line;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,11 +10,13 @@
   }
   .introContainer {
     display: flex;
+    min-height: 50vh;
+    max-width: 90%;
     align-items: center;
     gap: 4rem;
-    margin: 2rem 0;
     img {
       border-radius: 0.5rem;
+      box-shadow: 0 0 2rem #ffd60a;
     }
     .intro {
       font-weight: 400;
