--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,11 @@
   white-space: pre-line;
 }
 
+a {
+  text-decoration: none;
+  color: #000814;
+}
+
 .caption {
   color: #003566;
   font-weight: 500;
