--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -9,6 +9,51 @@
   background-color: rgba(255, 195, 0, 0.5);
   backdrop-filter: blur(4rem);
   -webkit-backdrop-filter: blur(4rem);
+  .menu {
+    position: absolute;
+    font-size: 2rem;
+    right: 1rem;
+    display: none;
+  }
+  .links {
+    display: flex;
+    gap: 2rem;
+    a {
+      display: flex;
+      gap: 0.25rem;
+      align-items: center;
+    }
+  }
+}
+@media only screen and (max-width: 600px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    .menu {
+      display: block;
+    }
+    .links {
+      display: none;
+    }
+    .links.active {
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+      position: sticky;
+      margin-top: 1rem;
+      justify-content: center;
+      align-items: center;
+      a {
+        width: 100%;
+        height: 3rem;
+        border-bottom: 0.2rem solid rgba(0, 29, 61, 0.5);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
 }
 
 .website-name {
