--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -3,13 +3,16 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem 2rem;
-  position: sticky;
+  position: fixed;
   top: 0;
   background-color: rgba(255, 195, 0, 0.5);
   backdrop-filter: blur(4rem);
   -webkit-backdrop-filter: blur(4rem);
+  .website-name {
+    margin: 1rem 2rem;
+  }
   .menu {
+    margin: 1rem 2rem;
     position: absolute;
     font-size: 2rem;
     right: 1rem;
@@ -19,14 +22,16 @@
   .links {
     display: flex;
     gap: 2rem;
+    margin-right: 2rem;
     a {
       display: flex;
       gap: 0.25rem;
+      justify-content: center;
       align-items: center;
     }
   }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 650px) {
   .navbar {
     display: flex;
     flex-direction: column;
@@ -37,21 +42,24 @@
     .links {
       display: none;
     }
+
     .links.active {
+      gap: 0;
       display: flex;
       width: 100%;
       flex-direction: column;
-      position: sticky;
-      margin-top: 1rem;
       justify-content: center;
       align-items: center;
       a {
         width: 100%;
-        height: 3rem;
-        border-bottom: 0.2rem solid rgba(0, 29, 61, 0.5);
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 1rem 0;
+        border-top: 2px solid rgba(0, 53, 102, 0.5);
+      }
+      :last-child {
+        border-bottom: 2px solid rgba(0, 53, 102, 0.5);
       }
     }
   }
