--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -58,7 +58,7 @@
         padding: 1rem 0;
         border-top: 2px solid rgba(0, 53, 102, 0.5);
       }
-      :last-child {
+      a:last-child {
         border-bottom: 2px solid rgba(0, 53, 102, 0.5);
       }
     }
